fixed alignment and slide size

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
   background-image: linear-gradient(rgb(59, 161, 245),rgb(126, 188, 245));
   background-repeat: no-repeat;
+  background-size: contain;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -13,6 +14,7 @@ body{
   background-size: cover;
   height: 80vh;
   width: 80vw;
+  display: inline-block;
 }
 
 #search-form{
